hide business package promotion

--- a/css/archive.css
+++ b/css/archive.css
@@ -3,3 +3,7 @@
 [title="Archive"] {
   display: none !important;
 }
+
+[data-derived-recommendation-interaction-details-blob] {
+  display: none !important;
+}
